# freddy_description

./: CMakeLists.txt  README.md  package.xml
freddy_base_description/: CMakeLists.txt  package.xml
freddy_base_description/urdf/: freddy_base.urdf.xacro  kelo_wheel.urdf.xacro
freddy_base_description/urdf/sensors/: hokuyo.urdf.xacro
freddy_description/: CMakeLists.txt  package.xml
freddy_description/launch/: freddy_rviz.launch  gazebo.launch
freddy_description/robots/: freddy.urdf.xacro
freddy_torso_description/: CMakeLists.txt  package.xml
freddy_torso_description/urdf/: freddy_torso.urdf.xacro
freddy_torso_description/urdf/sensors/: hokuyo.urdf.xacro
launch/: gazebo.launch
robots/: freddy.urdf.xacro
urdf/: freddy_base.urdf.xacro  kelo_wheel.urdf.xacro
