<?xml version="1.0"?>
<package format="2">
  <name>freddy_description</name>
  <version>0.1.0</version>
  <description>Robot descriptions for the freddy robot in form of URDF files and meshes</description>

  <maintainer email="robotics@inf.h-brs.de">MAS robotics</maintainer>

  <license>GPLv3</license>

  <author email="dharmingeo@gmail.com">Dharmin B.</author>
  <author email="sushant.chavan@smail.inf.h-brs.de">Sushant Chavan</author>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>freddy_base_description</exec_depend>
  <exec_depend>freddy_torso_description</exec_depend>
</package>
